<resources>
    <string name="app_name">VigiChild</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Create account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="select_mode_info">Select the application mode :</string>
    <string name="parent_mode_desc">Parent mode : follow and protect your child</string>
    <string name="child_mode_desc">Child mode : set this phone as your child\'s phone and monitor it</string>
    <string name="button_parent_mode">Parent Mode</string>
    <string name="button_child_mode">Child Mode</string>
    <string name="button_parent_menu_localise">Localise</string>
    <string name="button_parent_menu_info_list">Info List</string>
    <string name="button_parent_menu_interactions">Interactions</string>
    <string name="button_parent_menu_access_data">Access Phone Data</string>
    <string name="send_alert">Send Alert</string>
    <string name="parent_audio_explanation">Record an audio file and send it directly to your child\'s phone to play it. Hit the record button and then the send button when first step is done :</string>
    <string name="parent_record_audio">Start recording</string>
    <string name="parent_send_audio_alert">SEND AUDIO ALERT</string>
    <string name="start_playing">Start playing</string>
</resources>