<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".child_mode.ChildMenuActivity">


    <Button
        android:id="@+id/button_parent_play_audio"
        android:layout_width="360dp"
        android:layout_height="89dp"
        android:text="@string/start_playing"
        app:layout_constraintBottom_toTopOf="@+id/button_parent_send_audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_parent_record_audio" />

    <TextView
        android:id="@+id/parent_mode_desc2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/parent_audio_explanation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_parent_record_audio"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_parent_record_audio"
        android:layout_width="360dp"
        android:layout_height="89dp"
        android:text="@string/parent_record_audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parent_mode_desc2" />

    <Button
        android:id="@+id/button_parent_send_audio"
        android:layout_width="360dp"
        android:layout_height="89dp"
        android:text="@string/parent_send_audio_alert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_parent_record_audio" />


</androidx.constraintlayout.widget.ConstraintLayout>