<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".parent_mode.ParentMenuActivity">

    <Button
        android:id="@+id/button_parent_menu_account"
        android:layout_width="360dp"
        android:layout_height="89dp"
        android:text="Account Settings "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/parent_menu_alert_settings"
        app:layout_constraintStart_toStartOf="@+id/parent_menu_alert_settings" />

    <Button
        android:id="@+id/button_parent_menu_localise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:text="@string/button_parent_menu_localise"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_parent_menu_account"
        app:layout_constraintEnd_toEndOf="@+id/parent_menu_alert_settings"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/parent_menu_alert_settings"
        app:layout_constraintTop_toBottomOf="@+id/parent_menu_alert_settings"
        app:layout_constraintVertical_bias="0.088" />

    <Button
        android:id="@+id/button_parent_menu_info_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:text="@string/button_parent_menu_info_list"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_parent_menu_account"
        app:layout_constraintEnd_toEndOf="@+id/button_parent_menu_access_data"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/button_parent_menu_access_data"
        app:layout_constraintTop_toBottomOf="@+id/button_parent_menu_access_data"
        app:layout_constraintVertical_bias="0.284" />

    <Button
        android:id="@+id/button_parent_menu_interactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:text="@string/button_parent_menu_interactions"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_parent_menu_account"
        app:layout_constraintEnd_toEndOf="@+id/button_parent_menu_localise"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/button_parent_menu_localise"
        app:layout_constraintTop_toBottomOf="@+id/button_parent_menu_localise"
        app:layout_constraintVertical_bias="0.072" />

    <Button
        android:id="@+id/button_parent_menu_access_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:text="@string/button_parent_menu_access_data"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_parent_menu_account"
        app:layout_constraintEnd_toEndOf="@+id/button_parent_menu_interactions"
        app:layout_constraintStart_toStartOf="@+id/button_parent_menu_interactions"
        app:layout_constraintTop_toBottomOf="@+id/button_parent_menu_interactions"
        app:layout_constraintVertical_bias="0.214" />

    <Button
        android:id="@+id/parent_menu_alert_settings"
        android:layout_width="360dp"
        android:layout_height="89dp"
        android:text="Alert Settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>